fix text overflow issue

--- a/client/app/containers/controlpanel/assess/engagement/components/engagement-services-box/engagement-services-box.component.scss
+++ b/client/app/containers/controlpanel/assess/engagement/components/engagement-services-box/engagement-services-box.component.scss
@@ -77,7 +77,6 @@ $margin-top: 30px;
     margin-top: $margin-top;
 
     p {
-      line-height: 1;
       margin-bottom: 0;
     }
 
@@ -93,7 +92,7 @@ $margin-top: 30px;
       border-top: 1px solid $border-color;
 
       p {
-        top: 15px;
+        top: 12px;
         position: relative;
       }
 
